--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,4 +31,8 @@
     .idea-bubble {
         @apply bg-white flex justify-center items-center rounded-[50px] w-1/2 h-20
     }
+
+    .dashboard-shadow {
+        @apply shadow-[0px_0px_50px_5px_#4541332e]
+    }
 }
