Update code with various changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@
     }
 
     .graph-checkbox {
-        @apply flex flex-row items-center gap-1
+        @apply flex flex-row items-center gap-1 text-sm
     }
 
     .color-note-button {
