--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
     --primary-color: #1976d214;
-    --hover-color: #3877b53b
+    --hover-color: #3877b53b;
 }
 
 @layer components {
@@ -25,9 +25,9 @@
         @apply border-solid border-[#c6beaa] w-48 shrink-0 h-px border-t border-b-0 border-x-0;
     }
 
-    .main-page {
+    /* .main-page {
         @apply overflow-hidden flex flex-row gap-5 w-full items-center px-16 justify-center h-[95vh]
-    }
+    } */
 
     .container-text {
         @apply text-center text-2xl font-semibold
@@ -64,6 +64,40 @@
 
     .color-note-button {
         @apply rounded-3xl w-4 h-4
+    }
+
+    /* Hexagon style */
+    .hexagon {
+        background: url('/honey.jpg');
+        background-size: 415px;
+        display: flex;
+        width: var(--hex-size);
+        height: var(--hex-size);
+        clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+        align-items: center;
+        justify-content: center;
+        margin-right: calc((var(--hex-size)/2) + var(--gap)*2);
+    }
+
+    .hex-container {
+        --hex-size: 150px;
+        --gap: 5px;
+        /* display: flex; */
+        position: relative;
+        width: 100%;
+    }
+
+    .hex-row {
+        display: flex;
+    }
+
+    .hex-row:not(:first-child) {
+        margin-top: calc(0px - (var(--hex-size)/2) + var(--gap)/2);
+    }
+
+    .hex-row:nth-child(even) {
+        margin-left: calc(var(--hex-size)*0.75 + var(--gap));
+
     }
 
 }
