--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@
         display: flex;
         width: var(--hex-size);
         height: var(--hex-size);
-        clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+        clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
         align-items: center;
         justify-content: center;
         margin-right: calc((var(--hex-size)/2) + var(--gap)*2);
@@ -95,7 +95,7 @@
     }
 
     .hex-row:not(:first-child) {
-        margin-top: calc(0px - (var(--hex-size)/2) + var(--gap)/2);
+        margin-top: calc(0px - (var(--hex-size)/2 + var(--gap)));
     }
 
     .hex-row:nth-child(even) {
