Add CSS styles for hovered menu and add settings.svg icon*** ***Update className for WeatherElement component*** ***Update fetch API in weather-forecast route*** ***Add GraphExtra component and update MainGraph component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,4 +102,13 @@
         margin-left: calc(var(--hex-size)*0.75 + var(--gap));
     }
 
+    #hovered-menu[data-hovered="true"] {
+        transform: translateX(0);
+    }
+
+    #hovered-menu[data-hovered="false"] {
+        /* display: none; */
+        transform: translateX(-100%);
+
+    }
 }
