Add new SVG icons and update CustomTooltip component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,4 +111,8 @@
         transform: translateX(-100%);
 
     }
+
+    .custom-tooltip {
+        @apply -bg--primary-color rounded-lg shadow-lg p-2
+    }
 }
