Update style, optimazed data loading, added prediction line on graph

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,4 +120,10 @@
         @apply hover:-bg--hover-color rounded-3xl px-1
     }
 
+    .text-info {
+        top: calc(100% + 5px);
+        transform: translateX(-50%);
+        max-width: calc(100vw - 20px);
+    }
+
 }
